--- a/src/app/core/generic-grid/generic-grid.component.css
+++ b/src/app/core/generic-grid/generic-grid.component.css
@@ -2,39 +2,8 @@ table {
   width: 100%;
 }
 
-table.mat-table {
-  border-spacing: 0;
+.container {
+  overflow: auto;
+  height: 400px;
 }
 
-tr.mat-header-row {
-  height: 56px;
-}
-
-tr.mat-row,
-tr.mat-footer-row {
-  height: 48px;
-}
-
-th.mat-header-cell {
-  text-align: left;
-}
-
-th.mat-header-cell,
-td.mat-cell,
-td.mat-footer-cell {
-  padding: 0;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-}
-
-th.mat-header-cell:first-child,
-td.mat-cell:first-child,
-td.mat-footer-cell:first-child {
-  padding-left: 24px;
-}
-
-th.mat-header-cell:last-child,
-td.mat-cell:last-child,
-td.mat-footer-cell:last-child {
-  padding-right: 24px;
-}
