added edit button

--- a/src/app/componets/bill-panel/bill-panel.component.html
+++ b/src/app/componets/bill-panel/bill-panel.component.html
@@ -64,7 +64,7 @@
               (click)="makeSearchBillsAPICall()">
         <mat-icon>refresh</mat-icon>
       </button>
-      <button mat-icon-button
+      <button mat-mini-fab
               routerLink="/register-bill"
               routerLinkActive="active-link">
         <mat-icon>add</mat-icon>
