cleared unused classes.

--- a/src/app/core/generic-grid/generic-grid.component.html
+++ b/src/app/core/generic-grid/generic-grid.component.html
@@ -2,9 +2,7 @@
 
   <div class="container">
     <table mat-table
-           [dataSource]="dataSource"
-           class="mat-elevation-z8"
-           matSort>
+           [dataSource]="dataSource">
 
       <caption></caption>
 
