re-factored code for routing.

--- a/src/app/components/bill-panel/bill-panel.component.html
+++ b/src/app/components/bill-panel/bill-panel.component.html
@@ -64,7 +64,7 @@
               (click)="makeSearchBillsAPICall()">
         <mat-icon>refresh</mat-icon>
       </button>
-      <button mat-mini-fab
+      <button mat-mini-fab color="primary"
               routerLink="/register-bill"
               routerLinkActive="active-link">
         <mat-icon>add</mat-icon>
