--- a/src/app/components/user-registration/user-registration.component.html
+++ b/src/app/components/user-registration/user-registration.component.html
@@ -24,6 +24,7 @@
     </mat-form-field>
 
     <mat-radio-group formControlName="role">
+      <label id="example-radio-group-label">User Role  </label>
       <mat-radio-button [value]="UserRole.ADMIN">
         {{UserRole.ADMIN}}
       </mat-radio-button>
