--- a/src/app/components/app-main-nav/app-main-nav.component.html
+++ b/src/app/components/app-main-nav/app-main-nav.component.html
@@ -9,7 +9,7 @@
       <a mat-button
          routerLink="/customer-panel"
          routerLinkActive="active-link">Customer panel</a>
-      <a mat-button
+      <a *ngIf="isAdmin" mat-button
          routerLink="/user-panel"
          routerLinkActive="active-link">User panel</a>
     </div>
