renamed generic-grid to mat-generic-grid. commented the bootstrap.

--- a/src/app/components/bill-panel/bill-panel.component.html
+++ b/src/app/components/bill-panel/bill-panel.component.html
@@ -73,8 +73,8 @@
 
   </section>
   <mat-card-content>
-    <app-generic-grid [gridConfig]="billTableConfig"
+    <app-mat-generic-grid [gridConfig]="billTableConfig"
                       [(dataSource)]="billList"
-                      (clickOfIconButton)="onClickOfEditIconButton($event)"></app-generic-grid>
+                      (clickOfIconButton)="onClickOfEditIconButton($event)"></app-mat-generic-grid>
   </mat-card-content>
 </mat-card>
