--- a/src/app/components/customer-panel/customer-panel.component.html
+++ b/src/app/components/customer-panel/customer-panel.component.html
@@ -29,9 +29,9 @@
     </mat-card-actions>
   </section>
   <mat-card-content>
-    <app-generic-grid [gridConfig]="customerGridConfig"
+    <app-mat-generic-grid [gridConfig]="customerGridConfig"
                       [dataSource]='genericMatTabaleDataSource'>
-    </app-generic-grid>
+    </app-mat-generic-grid>
   </mat-card-content>
 
 </mat-card>
