--- a/src/app/components/user-panel/user-panel.component.html
+++ b/src/app/components/user-panel/user-panel.component.html
@@ -23,8 +23,8 @@
     </mat-card-actions>
   </section>
   <mat-card-content>
-    <app-generic-grid [gridConfig]="userGridConfig"
+    <app-mat-generic-grid [gridConfig]="userGridConfig"
                       [dataSource]='genericMatTabaleDataSource'>
-    </app-generic-grid>
+    </app-mat-generic-grid>
   </mat-card-content>
 </mat-card>
